--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
+article, aside, details, figcaption, figure, footer, header, 
+nav, section, audio, canvas, video {
+    display: block;
+}
+* {
+    margin: 0 auto;
+    padding: 0; 
+}
+
+
 body {
-    margin: 0 5px 0 5px;
-    padding: 0;
+    /* margin: 0 5px 0 5px;
+    padding: 0; */
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -26,6 +36,7 @@ nav ul li a {
 .page-top {
     background: url("../images/pexels-roman-odintsov-4553037.jpg") no-repeat center center fixed; 
     background-size: cover; 
+    border-radius: 5% 5% 0 0;
     padding-top: 32%;
     padding-bottom: 1%;
 }
@@ -39,11 +50,10 @@ h1 {
 }
 
 .thirtyPercent {
-    /* margin: 0 auto;
-    padding: 0; */
     display: inline-block;
     width: 33.1%;
     height: 65vh;
+    border-radius: 5%;
     
 }
 
@@ -54,15 +64,58 @@ h1 {
 main {
     padding: 1% 0;
     position: relative;
+    z-index: 0;
 }
 
 main h2 {
     position: absolute;
-    top: 35%;
-    right: 43%;
+    top: 43%;
+    right: 40%;
+    z-index: 2;
     color: white;
     background-color: rgba(0, 0, 0, 0.7);
     padding: 0.5%;
+}
+
+.projects {
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+figure {
+    display: inline-block;
+    border-radius: 5%;
+    
+}
+figure img {
+    display: inline-block;
+    width: 32vw;
+    border-radius: 5%;
+    /* margin-top: -5px;
+    margin-right: -5px; */
+}
+figure img:hover {
+    opacity: 0.4;
+    /* filter: alpha(opacity=100); */
+}
+
+
+
+
+.contact-form-half {
+    height: 70vh;
+    width: auto;
+    border-radius: 5px;
+}
+
+
+
+.floatRight {
+    float: right;
+}
+
+.floatLeft {
+    float: left;
 }
 
 
@@ -75,6 +128,12 @@ main h2 {
     }
 
     main h2 {
-        top: 20%;
+       top: 22%;
+       right: 12%;
+    }
+
+    figure img {
+        width: 100%;
+        border-radius: 5%;
     }
 }
