cleaned out image files

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ figure img:hover {
 
 
 
-.contact-form-half {
+/* .contact-form-half {
     height: 70vh;
     width: auto;
     border-radius: 5px;
@@ -116,8 +116,16 @@ figure img:hover {
 
 .floatLeft {
     float: left;
-}
+} */
 
+
+.contact-form {
+    background: url("../images/limone-2866245_1920.jpg") no-repeat center center fixed; 
+    background-size: cover; 
+    padding-top: 32%;
+    padding-bottom: 1%;
+
+}
 
 @media screen and (max-width: 400px) {
     .thirtyPercent {
