--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ main h2 {
     padding: 0.5%;
 }
 
+
 .projects {
     margin-left: 1%;
     margin-right: 1%;
@@ -85,6 +86,7 @@ main h2 {
 figure {
     display: inline-block;
     border-radius: 5%;
+    position: relative;
     
 }
 figure img {
@@ -93,6 +95,27 @@ figure img {
     border-radius: 5%;
     /* margin-top: -5px;
     margin-right: -5px; */
+}
+
+h3 {
+   position: absolute;
+   top: 25%;
+   right: 9%;
+   color: rgb(52, 11, 72);
+   text-shadow: 2px 2px 4px white;
+   z-index: 3;
+   font-size: 150%;
+}
+
+h4 {
+    position: absolute;
+    top: 45%;
+    right: 9%;
+    color: rgb(52, 11, 72);
+    text-shadow: 2px 2px 4px white;
+    z-index: 3;
+    font-size: 150%;
+    
 }
 figure img:hover {
     opacity: 0.4;
