--- a/css/style.css
+++ b/css/style.css
@@ -12,33 +12,40 @@ body {
     /* margin: 0 5px 0 5px;
     padding: 0; */
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background:rgba(187, 177, 197, 0.9);
+    background: rgba(26, 94, 110, 0.8);
+    color: white;
+}
+
+nav {   
+    padding: 1% 2% 2% 0;
 }
 
 nav ul li {
     list-style: none;
-    padding: 2%;
+    padding: 3%;
     float: right;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: brown;
+    color: white;
 }
 
 .logo {
     float: left;
-    padding: 2%;
+    padding: 3%;
 }
 
 .clearFloat {
     clear: both;
 }
+
 .page-top {
     background: url("../images/pexels-roman-odintsov-4553037.jpg") no-repeat center center fixed; 
     background-size: cover; 
-    border-radius: 5% 5% 0 0;
-    padding-top: 32%;
-    padding-bottom: 1%;
+    padding-top: 35%;
 }
 
 
@@ -51,7 +58,7 @@ h1 {
 
 .thirtyPercent {
     display: inline-block;
-    width: 33.1%;
+    width: 33%;
     height: 65vh;
     border-radius: 5%;
     
@@ -72,7 +79,17 @@ main h2 {
     top: 43%;
     right: 40%;
     z-index: 2;
-    color: white;
+    /* color: white; */
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 0.5%;
+}
+
+main .loweredText {
+    position: absolute;
+    top: 58%;
+    right: 18%;
+    z-index: 2;
+    /* color: white; */
     background-color: rgba(0, 0, 0, 0.7);
     padding: 0.5%;
 }
@@ -100,9 +117,11 @@ figure img {
 h3 {
    position: absolute;
    top: 25%;
-   right: 9%;
-   color: rgb(52, 11, 72);
-   text-shadow: 2px 2px 4px white;
+   left: 5%;
+   /* color: rgb(52, 11, 72); */
+   text-shadow: 2px 2px 4px black;
+   /* background-color: rgba(0, 0, 0, 0.7); */
+   color: white;
    z-index: 3;
    font-size: 150%;
 }
@@ -110,9 +129,11 @@ h3 {
 h4 {
     position: absolute;
     top: 45%;
-    right: 9%;
-    color: rgb(52, 11, 72);
-    text-shadow: 2px 2px 4px white;
+    left: 5%;
+    /* background-color: rgba(0, 0, 0, 0.7); */
+    /* color: rgb(52, 11, 72); */
+    text-shadow: 2px 2px 4px black;
+    color: white;
     z-index: 3;
     font-size: 150%;
     
@@ -179,7 +200,8 @@ footer {
     padding: 2% 0;
     text-align: center;
     background: rgba(26, 94, 110, 0.8);
-    color: white;
+    /* background:rgba(187, 177, 197, 0.9);
+    color: rgb(26, 94, 110) */
 }
 
 @media screen and (max-width: 400px) {
@@ -198,5 +220,9 @@ footer {
     figure img {
         width: 100%;
         border-radius: 5%;
+    }
+
+    .hiddenMobile {
+        display: none;
     }
 }
